Move engine demo to example module